salesforce/ReSalesforceCore/force-app/main/default/objects/ERP_Stock_Movement__c/ERP_Stock_Movement__c.object-meta.xml
<CustomObject>
    <label>Stok Hareketi</label>
    <nameField><displayFormat>SH-{000000}</displayFormat><label>Stok Hareketi No</label><type>AutoNumber</type></nameField>
    <pluralLabel>Stok Hareketleri</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>