salesforce/ReSalesforceCore/force-app/main/default/objects/ERP_Stock_Movement__c/fields/Direction__c.field-meta.xml
<CustomField>
    <fullName>Direction__c</fullName>
    
    <label>YÃ¶n</label>
    
    <type>Picklist</type>
    <valueSet><restricted>true</restricted><valueSetDefinition><sorted>false</sorted><value><fullName>Giris</fullName><default>false</default><label>GiriÅŸ</label></value><value><fullName>Cikis</fullName><default>false</default><label>Ã‡Ä±kÄ±ÅŸ</label></value></valueSetDefinition></valueSet>
</CustomField>