salesforce/ReSalesforceCore/force-app/main/default/objects/ERP_Stock_Movement__c/fields/Lot_Number__c.field-meta.xml
<CustomField>
    <fullName>Lot_Number__c</fullName>
    
    <label>Lot NumarasÄ±</label>
    
    <type>Text</type>
    <length>100</length>
</CustomField>