salesforce/ReSalesforceCore/force-app/main/default/objects/ERP_Stock_Movement__c/fields/Movement_Date__c.field-meta.xml
<CustomField>
    <fullName>Movement_Date__c</fullName>
    
    <label>Hareket Tarihi</label>
    <required>true</required>
    <type>DateTime</type>
    
</CustomField>