salesforce/ReSalesforceCore/force-app/main/default/objects/ERP_Stock_Movement__c/fields/Notes__c.field-meta.xml
<CustomField>
    <fullName>Notes__c</fullName>
    
    <label>AÃ§Ä±klama</label>
    
    <type>LongTextArea</type>
    <length>4000</length><visibleLines>3</visibleLines>
</CustomField>