salesforce/ReSalesforceCore/force-app/main/default/objects/ERP_Stock_Movement__c/fields/Quantity__c.field-meta.xml
<CustomField>
    <fullName>Quantity__c</fullName>
    
    <label>Miktar</label>
    <required>true</required>
    <type>Number</type>
    <precision>18</precision><scale>4</scale>
</CustomField>