salesforce/ReSalesforceCore/force-app/main/default/objects/ERP_Stock_Movement__c/fields/Reference_Document__c.field-meta.xml
<CustomField>
    <fullName>Reference_Document__c</fullName>
    
    <label>Referans Belge</label>
    
    <type>Text</type>
    <length>100</length>
</CustomField>