salesforce/ReSalesforceCore/force-app/main/default/objects/ERP_Stock_Movement__c/fields/Serial_Number__c.field-meta.xml
<CustomField>
    <fullName>Serial_Number__c</fullName>
    
    <label>Seri NumarasÄ±</label>
    
    <type>Text</type>
    <length>100</length>
</CustomField>