salesforce/ReSalesforceCore/force-app/main/default/objects/ERP_Stock_Movement__c/fields/Stock_Item__c.field-meta.xml
<CustomField>
    <fullName>Stock_Item__c</fullName>
    
    <label>Stok KartÄ±</label>
    
    <type>MasterDetail</type>
    <referenceTo>ERP_Stock_Item__c</referenceTo><relationshipLabel>Stok Hareketleri</relationshipLabel><relationshipName>Stock_Movements</relationshipName><reparentableMasterDetail>false</reparentableMasterDetail><writeRequiresMasterRead>false</writeRequiresMasterRead>
</CustomField>