salesforce/ReSalesforceCore/force-app/main/default/objects/ERP_Stock_Movement__c/fields/Unit_Cost__c.field-meta.xml
<CustomField>
    <fullName>Unit_Cost__c</fullName>
    
    <label>Birim Maliyet</label>
    
    <type>Currency</type>
    <precision>18</precision><scale>2</scale>
</CustomField>