salesforce/ReSalesforceCore/force-app/main/default/objects/ERP_Stock_Movement__c/validationRules/Quantity_Must_Be_Positive.validationRule-meta.xml
<ValidationRule>
    <fullName>Quantity_Must_Be_Positive</fullName><active>true</active>
    <errorConditionFormula>Quantity__c &lt;= 0</errorConditionFormula>
    <errorDisplayField>Quantity__c</errorDisplayField><errorMessage>Miktar sÄ±fÄ±rdan bÃ¼yÃ¼k olmalÄ±dÄ±r.</errorMessage>
</ValidationRule>